[package]
name = "xxif"
version = "0.1.0"
edition = "2021"
authors = ["Avinash Maddikonda <svasssakavi@gmail.com>"]
categories = [
    "aerospace::drones",
    "command-line-utilities",
    "filesystem",
    "multimedia::images",
]
description = "Generate image hashes and add them to the images' EXIF data."
homepage = "https://sfm61319.github.io/xxif"
keywords = ["exif", "image", "hash", "concurrency", "cli"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SFM61319/xxif"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = [
    "deprecated",
    "derive",
    "cargo",
    "env",
    "unicode",
    "wrap_help",
    "string",
] }
little_exif = "0.3.1"
rayon = "1.10.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "local-time"] }
uuid = "1.8.0"
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.10", features = ["xxh3", "const_xxh3"] }
